# anime-image-generator

./: .gitignore  README.md  how_to_use.ipynb  pyproject.toml  requirements.txt
src/: lighting_train.py  train.py
src/anime_image_generator/: train.py
src/anime_image_generator/callbacks/: lighting_sample_images.py
src/anime_image_generator/datamodules/: image_datamodule.py
src/anime_image_generator/datasets/: image_dataset.py
src/anime_image_generator/models/: ImageDiffuser.py
