[tool.poetry]
name = "anime-image-generator"
version = "0.1.0"
description = ""
authors = ["Paweł Pepliński <p.peplinski7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
