[tool.poetry]
name = "anime-image-generator"
version = "0.1.0"
description = ""
authors = ["Paweł Pepliński <p.peplinski7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.3.0+cu121", source = "pytorch-gpu-src"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch-gpu-src"}
lightning = "^2.2.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
