[tool.poetry]
name = "anime-image-generator"
version = "0.1.0"
description = ""
authors = ["Paweł Pepliński <p.peplinski7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.3.0+cu121", source = "pytorch-gpu-src"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch-gpu-src"}
lightning = "^2.2.5"
diffusers = {extras = ["torch"], version = "^0.28.2"}
numpy = "^1.26.0"
accelerate = "^0.31.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
tensorboard = "^2.17.0"
tensorboardx = "^2.6.2.2"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
